fix:removes unnessary scrollbars

--- a/client/dashboard/app/styles/components/ProjectTiles.scss
+++ b/client/dashboard/app/styles/components/ProjectTiles.scss
@@ -41,7 +41,6 @@
 div.kz-project {
   position: relative;
   background-color: var(--color-bg);
-  padding: 1rem;
 
   div.dots1,
   div.dots2 {
