--- a/client/dashboard/app/styles/components/Task.scss
+++ b/client/dashboard/app/styles/components/Task.scss
@@ -45,7 +45,7 @@
 div.kz-task-project {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 92vh;
   color: var(--color-text-alt);
   display: flex;
   flex-direction: column;
@@ -82,10 +82,9 @@ div.kz-task-project {
   div.kz-task-project-wrapper {
     position: relative;
     width: 100%;
-    height: 100vh;
-    padding: 2rem 4rem;
+    height: 90vh;
+    padding: 1.5rem 3rem;
     overflow-x: hidden;
-    overflow-y: scroll;
 
     @include for-mobile-only {
       padding: 1rem;
