--- a/client/dashboard/app/styles/pages/ProjectTiles.scss
+++ b/client/dashboard/app/styles/pages/ProjectTiles.scss
@@ -140,7 +140,7 @@ div.kz-project {
   div.kz-task-wrapper {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 90vh;
   }
 
   div.kz-user{
